--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -7,16 +7,16 @@
 }
 
 .contact_page .cliped_bg {
-  background: #4b6cb7; /* fallback for old browsers */
+  background: #f5793b; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #182848,
-    #4b6cb7
+    #f5793b,
+    #ffab00
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #182848,
-    #4b6cb7
+    #f5793b,
+    #ffab00
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   position: absolute;
   top: 0%;
